# k8s-patcher

./: Cargo.toml  Dockerfile  Justfile  README.md  index.yaml  kind-config.yaml
.github/workflows/: main.yaml  release-charts.yaml  release-docker.yaml  release.yaml
charts/patcher-chart/: Chart.yaml  values.yaml
charts/patcher-chart/templates/: deployment.yaml  tls.yaml  webhook.yaml
deploy/: debug-patcher-values.yaml  debug.yaml
src/: main.rs
