[package]
name = "k8s-patcher"
version = "0.1.1"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
keywords = ["kubernetes", "k8s"]
repository = "https://github.com/ilya-epifanov/k8s-patcher"
edition = "2021"

[dependencies]
kube = { version = "0.71", default-features = false, features = ["admission", "rustls-tls"] }
actix-rt = "2"
actix-web = { version = "3", features = ["rustls"] }
anyhow = "1"
rustls = "0.18"
k8s-openapi = { version = "0.14", features = ["v1_22"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.8"
json-patch = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
itertools = "0.10"

[[bin]]
name = "patcher-maw"
path = "src/main.rs"
